--- a/_config.yml
+++ b/_config.yml
@@ -6,17 +6,17 @@ favicon: images/favicon.ico
 version: 2
 
 # Personal info
-name: Brett Harris
-title: Senior Network System Administrator
-email: brett.h@email.co.uk
-website: www.github.com/sproogen/resume-theme
+name: Seobin Park
+title: M.S. Student in Computer Science @ Hanyang University
+email: seobinpark@hanyang.ac.kr
+website: 
 
 # Dark Mode (true/false/never)
-darkmode: false
+darkmode: never
 
 # Social links
-twitter_username: facespics
-github_username:  sproogen
+twitter_username: 
+github_username:  parkseobin
 # stackoverflow_username: "00000001"
 # dribbble_username: jekyll
 # facebook_username: jekyll
