--- a/_config.yml
+++ b/_config.yml
@@ -21,8 +21,8 @@ github_username:  parkseobin
 # dribbble_username: jekyll
 # facebook_username: jekyll
 # flickr_username: jekyll
-instagram_username: jameswgrant
-linkedin_username: jameswgrant
+instagram_username: 
+linkedin_username: seobin-park-715786187
 # xing_username: jekyll
 # pinterest_username: jekyll
 youtube_username: globalmtb
@@ -46,11 +46,9 @@ additional_links:
 
 # About Section
 # about_title: About Me
-about_profile_image: images/profile.jpg
+about_profile_image: images/seobin_profile.png
 about_content: | # this will include new lines to allow paragraphs
-  Hi, my name's Brett and I'm a senior network system administrator. As well as administrating systems I also have experience making software and web apps. I have worked at a number of companies gaining teamwork and leadership skills.
-
-  I am most skilled in: <mark>AWS</mark> and <mark>Eating Pizza</mark>
+  Hi, my name is Seobin Park and I'm an M.S. student in Computer Science at Hanyang University. Currently I'm working in Visual Intelligence Lab supervised by Prof. Tae Hyun Kim. 
 
 content:
   - title: Projects # Title for the section
