--- a/_config.yml
+++ b/_config.yml
@@ -46,7 +46,7 @@ additional_links:
 
 # About Section
 # about_title: About Me
-about_profile_image: images/seobin_profile.png
+about_profile_image: images/seobin_profile2.png
 about_content: | # this will include new lines to allow paragraphs
   Hi, my name is Seobin Park and I'm an M.S. student in Computer Science at Hanyang University. Currently I'm working in Visual Intelligence Lab supervised by Prof. Tae Hyun Kim. 
 
