--- a/_config.yml
+++ b/_config.yml
@@ -49,6 +49,8 @@ additional_links:
 about_profile_image: images/seobin_profile2.png
 about_content: | # this will include new lines to allow paragraphs
   Hi, my name is Seobin Park and I'm an M.S. student in Computer Science at Hanyang University. Currently I'm working in Visual Intelligence Lab supervised by Prof. Tae Hyun Kim. 
+  My research interests are in computer vision, computational photography and machine leraning. 
+  Please refer to my [CV](https://drive.google.com/file/d/1MI8tBAodGvGa4tguMH5W34X8F8UKqsIc/view?usp=sharing) for more details about me. 
   
 
 content:
@@ -60,17 +62,17 @@ content:
         link: 
         # link_text: Project Website
         additional_links:
-          - title:  sproogen/modern-resume-theme
+          - title:  github repo
             icon: fab fa-github
             url: github.com/parkseobin/MLSR
+          - title: paper url
+            icon: fab fa-globe
+            url: https://www.ecva.net/papers/eccv_2020/papers_ECCV/papers/123720749.pdf
           # - title:  Github page for project (eg. sproogen/modern-resume-theme)
           #   icon: fab fa-github
           #   url: Link to project (eg. sproogen.github.io/modern-resume-theme)
-        quote: >
-          This is probably one of the greatest apps ever created, if you don't agree you're probably wrong.
         description: | # this will include new lines to allow paragraphs
-          I started this project as a way if learning <mark>React</mark> and it has since grown into a fully fledged app. I have learned many skills through this and been I'm very proud of having this in my portfolio. If you don't have a project as awesome as this I would advise you make one.
-
+          ECCV 2020
 # Footer
 footer_show_references: true
 # references_title: References on request (Override references text)
